--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ sphinx-press-theme = "^0.7.3"
 sphinx-rtd-theme = "^0.5.2"
 black = "^21.5b1"
 mock = "^4.0.3"
+coverage = "^5.5"
+pytest-cov = "^2.12.0"
 
 [tool.poetry.dev-dependencies]
 
