--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ black = "^21.5b1"
 mock = "^4.0.3"
 coverage = "^5.5"
 pytest-cov = "^2.12.0"
+bumpversion = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 
