--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ mock = "^4.0.3"
 coverage = "^5.5"
 pytest-cov = "^2.12.0"
 bumpversion = "^0.6.0"
+sphinx-autobuild = "^2021.3.14"
 
 [tool.poetry.dev-dependencies]
 
