--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ coverage = "^5.5"
 pytest-cov = "^2.12.0"
 bumpversion = "^0.6.0"
 sphinx-autobuild = "^2021.3.14"
+coverage-badge = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 
