--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,28 @@
 [tool.poetry]
 name = "htminify"
 version = "0.1.0"
-description = "a fast, lightweight html minifier for python web frameworks"
+description = "A lightweight html minifier for all Python web frameworks and WSGI apps."
 authors = ["Abhinav Omprakash"]
+licence="BSD-3"
+readme="README.rst"
+homepage="https://github.com/AbhinavOmprakash/py-htminify"
+repository="https://github.com/AbhinavOmprakash/py-htminify"
+keywords=["html", "django","flask","wsgi", "middleware"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.6"
+
+[tool.poetry.dev-dependencies]
 Sphinx = "^4.0.1"
 tox = "^3.23.1"
 pytest = "^6.2.4"
-sphinxawesome-theme = "^1.19.3"
-sphinx-press-theme = "^0.7.3"
 sphinx-rtd-theme = "^0.5.2"
 black = "^21.5b1"
-mock = "^4.0.3"
 coverage = "^5.5"
 pytest-cov = "^2.12.0"
 bumpversion = "^0.6.0"
 sphinx-autobuild = "^2021.3.14"
-coverage-badge = "^1.0.1"
 
-[tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
